bran1 html_列表标签 <ul>\<li>无序的

--- a/web-html-css/src/main/webapp/WEB-INF/test.html
+++ b/web-html-css/src/main/webapp/WEB-INF/test.html
@@ -10,13 +10,20 @@
 啊实打实的 <br/>
 dasdas
 <hr/>
-<img src="E:\java_web\web-html-css\src\main\webapp\timg.jpg">
- &lt;br&gt; &nbsp; &nbsp; &nbsp; &nbsp;  哈哈
-<hr/>
 
 <!--a标签 -->
 <a href="http://www.baidu.com">百度</a>
 
-
+<!-- 列表标签 <ul> 无序标签-->
+<ul type="none">
+    <li>zs</li>
+    <li>ls</li>
+    <li>zl</li>
+    <li>ww</li>
+    <li>cq</li>
+</ul>
+<img src="E:\java_web\web-html-css\src\main\webapp\timg.jpg">
+ &lt;br&gt; &nbsp; &nbsp; &nbsp; &nbsp;  哈哈
+<hr/>
 </body>
 </html>
