--- a/web-html-css/src/main/webapp/WEB-INF/test.html
+++ b/web-html-css/src/main/webapp/WEB-INF/test.html
@@ -22,8 +22,32 @@ dasdas
     <li>ww</li>
     <li>cq</li>
 </ul>
-<img src="E:\java_web\web-html-css\src\main\webapp\timg.jpg">
+<!--<img src="./img/timg.jpg">   border标签边框  alt设置图片没有显示的提示-->
+<img src="../img/tiwmg.jpg" width="1000" height="1200" border="2" alt="图片找不到">
  &lt;br&gt; &nbsp; &nbsp; &nbsp; &nbsp;  哈哈
 <hr/>
+<!--
+  img标签是图片标签，用来显示图片的，src可以设置图片的路径
+
+  javaSE：
+     相对路径：从过程名开始算
+     绝对路径：从盘符：/目录/文件名
+
+  WEB：
+     相对路径：
+       .      表示表示当前文件所在的目录
+       ..     表示当前文件所在的上一层目录
+       文件名  表示当前文件所在文件的文件，相当于./文件名   ./可以省略
+
+     绝对路径：
+        正确格式： http://ip:port/工程名/资源路径
+
+-->
+
+<div>
+
+
+
+</div>
 </body>
 </html>
