bran1 html_表格标签 align="center"、colspan="" rowspan="2"、celSpace="0"

--- a/web-html-css/src/main/webapp/WEB-INF/test.html
+++ b/web-html-css/src/main/webapp/WEB-INF/test.html
@@ -11,10 +11,10 @@
 dasdas
 <hr/>
 
-<!--a标签 -->
+<!--1、  a标签 -->
 <a href="http://www.baidu.com">百度</a>
 
-<!-- 列表标签 <ul> 无序标签-->
+<!--2、 列表标签 <ul> 无序标签-->
 <ul type="none">
     <li>zs</li>
     <li>ls</li>
@@ -22,7 +22,8 @@ dasdas
     <li>ww</li>
     <li>cq</li>
 </ul>
-<!--<img src="./img/timg.jpg">   border标签边框  alt设置图片没有显示的提示-->
+
+<!--3、 <img src="./img/timg.jpg">   border标签边框  alt设置图片没有显示的提示-->
 <img src="../img/tiwmg.jpg" width="1000" height="1200" border="2" alt="图片找不到">
  &lt;br&gt; &nbsp; &nbsp; &nbsp; &nbsp;  哈哈
 <hr/>
@@ -43,6 +44,32 @@ dasdas
         正确格式： http://ip:port/工程名/资源路径
 
 -->
+
+<!--4、表格标签-->
+   <table border="2" align="center" width="300" height="300" cellspacing="0">
+       <tr>
+           <th colspan="2">1.1</th>
+
+           <td>1.3</td>
+       </tr>
+       <tr>
+           <td rowspan="2">2.1</td>
+           <td>2.2</td>
+           <td>2.3</td>
+       </tr>
+       <tr>
+
+           <td>3.2</td>
+           <td>1.3</td>
+       </tr>
+       <tr>
+           <td>3.1</td>
+           <td>3.2</td>
+           <td>3.3</td>
+       </tr>
+
+
+   </table>
 
 <div>
 
