bran1 html_iframe和a标签的用法

--- a/web-html-css/src/main/webapp/WEB-INF/test.html
+++ b/web-html-css/src/main/webapp/WEB-INF/test.html
@@ -67,12 +67,21 @@ dasdas
            <td>3.2</td>
            <td>3.3</td>
        </tr>
-
-
    </table>
+<hr/>
 
+ <!--iframe和a标签的用法，target name属性
+     iframe是一个独立的显示页面
+-->
+<iframe align="center" height="600" width="700" border="2" name="test"></iframe>
 <div>
+<ul>
+    <li><a href="test01.html" target="test">test01</a></li>
+    <li><a href="test02.html" target="test">test02</a></li>
+    <li></li>
 
+
+</ul>
 
 
 </div>
