--- a/web-html-css/src/main/webapp/WEB-INF/test.html
+++ b/web-html-css/src/main/webapp/WEB-INF/test.html
@@ -46,7 +46,7 @@ dasdas
 -->
 
 <!--4、表格标签-->
-   <table border="2" align="center" width="300" height="300" cellspacing="0">
+   <table border="2" align="center" width="100" height="100" cellspacing="0">
        <tr>
            <th colspan="2">1.1</th>
 
@@ -70,20 +70,40 @@ dasdas
    </table>
 <hr/>
 
- <!--iframe和a标签的用法，target name属性
+ <!--5、iframe和a标签的用法，target name属性
      iframe是一个独立的显示页面
 -->
-<iframe align="center" height="600" width="700" border="2" name="test"></iframe>
-<div>
+<iframe align="center" height="200" width="300" border="2" name="test"></iframe>
+
 <ul>
     <li><a href="test01.html" target="test">test01</a></li>
     <li><a href="test02.html" target="test">test02</a></li>
-    <li></li>
-
-
 </ul>
+    <hr/>
 
+    <!--6、表单
+     radio 是用name属性进行分组的
+     单选、复选、select 需要value属性
+    -->
+   <form action="http://localhost:8080" method="get">
+    用户账户：<input type="text" name="user" value="abc123"/><br/>
+    用户密码：<input type="password" name="password" value="123456" /><br/>
+    确认密码：<input type="password"  value="123456" /><br/>
+    性别：<input type="radio"  name="sex" value="male" />男<input type="radio" name="sex" value="female" checked="checked" />女<br/>
+    兴趣爱好：<input type="checkbox" name="lll" value="lq" checked="checked"/>篮球<input name="lll" value="pq" type="checkbox"/>排球<input type="checkbox"/>玩游戏<br/>
+       国籍：<select>
+   <option>---请选择---</option>
+   <option value="cn" selected="selected">中国</option>
+   <option>美国</option>
+   <option>韩国</option>
+   </select><br/>
+       自我评价：<textarea rows="5" cols="22" align="left">
+       写一写
+   </textarea>
+       <input type="reset" value="我要重置"/>
+       <input type="submit"/>
+      <!-- <input type="button" value="点击"/>-->
+   </form>
 
-</div>
 </body>
 </html>
