bran1 html_css 在head中写<style text="css">div:{;} </style>

--- a/web-html-css/src/main/webapp/WEB-INF/test.html
+++ b/web-html-css/src/main/webapp/WEB-INF/test.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>你好</title>
+    <style type="text/css">
+        div{
+            background: maroon;
+            border: antiquewhite;
+        }
+    </style>
 </head>
 
 <body background="green" a>
@@ -104,6 +110,9 @@ dasdas
        <input type="submit"/>
       <!-- <input type="button" value="点击"/>-->
    </form>
+<hr/>
+<div>saasdasdasdasdasdassad</div>
+div { position: relative; } p { position: absolute; } .a { background: #f00; z-index: 10; } .b { background: #0ff; z-index: 3; }<div class="test"><p class="a">asdas</p></div><div class="test2"><p class="b">asdas</p></div>
 
 </body>
 </html>
