bran1 html_css 自定义css并使用link标签引入<link rel="stylesheet" type="text/css" href="../css/test.css">

--- a/web-html-css/src/main/webapp/WEB-INF/test.html
+++ b/web-html-css/src/main/webapp/WEB-INF/test.html
@@ -2,13 +2,14 @@
 <html lang="en"> <!-- lang="zh_CN"  -->
 <head>
     <meta charset="UTF-8">
-    <title>你好</title>
+    <!--<title>你好</title>
     <style type="text/css">
         div{
             background: maroon;
             border: antiquewhite;
         }
-    </style>
+    </style>-->
+    <link rel="stylesheet" type="text/css" href="../css/test.css">
 </head>
 
 <body background="green" a>
@@ -114,5 +115,6 @@ dasdas
 <div>saasdasdasdasdasdassad</div>
 div { position: relative; } p { position: absolute; } .a { background: #f00; z-index: 10; } .b { background: #0ff; z-index: 3; }<div class="test"><p class="a">asdas</p></div><div class="test2"><p class="b">asdas</p></div>
 
+<span>sadas</span> <span>asdasdas</span>
 </body>
 </html>
