bran1 html_css id标签样式#id{属性名：属性}

--- a/web-html-css/src/main/webapp/WEB-INF/test.html
+++ b/web-html-css/src/main/webapp/WEB-INF/test.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en"> <!-- lang="zh_CN"  -->
 <head>
-    <meta charset="UTF-8">
-    <!--<title>你好</title>
-    <style type="text/css">
-        div{
-            background: maroon;
-            border: antiquewhite;
-        }
-    </style>-->
     <link rel="stylesheet" type="text/css" href="../css/test.css">
+    <meta charset="UTF-8">
+    <title>你好</title>
+    <style type="text/css">
+       #id1{
+           background: red;
+           font-style: oblique;
+           font-size: 5px;
+           boder: 2px solid lightseagreen;
+       }
+       #id2{
+           background: blue;
+           font-style: oblique;
+           font-size: 5px;
+           boder: 2px solid red;
+       }
+    </style>
 </head>
 
 <body background="green" a>
@@ -116,5 +124,10 @@ dasdas
 div { position: relative; } p { position: absolute; } .a { background: #f00; z-index: 10; } .b { background: #0ff; z-index: 3; }<div class="test"><p class="a">asdas</p></div><div class="test2"><p class="b">asdas</p></div>
 
 <span>sadas</span> <span>asdasdas</span>
+<hr/>
+
+<!-- id 选择器设置样式-->
+<div id="id1" >1233wedwef3</div>
+<div id="id2">45645sdfsd5</div>
 </body>
 </html>
