--- a/web-html-css/src/main/webapp/WEB-INF/test.html
+++ b/web-html-css/src/main/webapp/WEB-INF/test.html
@@ -17,6 +17,10 @@
            font-size: 5px;
            boder: 2px solid red;
        }
+       .s00s1{
+           background: blue;
+
+       }
     </style>
 </head>
 
@@ -129,5 +133,10 @@ div { position: relative; } p { position: absolute; } .a { background: #f00; z-i
 <!-- id 选择器设置样式-->
 <div id="id1" >1233wedwef3</div>
 <div id="id2">45645sdfsd5</div>
+
+<hr/>
+<div class="s00s1">001111111</div>
+
+<div></div>
 </body>
 </html>
