--- a/html_js/src/main/webapp/WEB-INF/test01.html
+++ b/html_js/src/main/webapp/WEB-INF/test01.html
@@ -5,7 +5,25 @@
     <title>javascript</title>
     <link rel="stylesheet" type="text/css" href="../css/test.css">
     <script type="text/javascript">
-        alert("页面中直接书写js代码！")
+        //alert("页面中直接书写js代码！")
+        var i;
+        //测试undefined
+        alert(i);
+        //typeof(i)，返回数值的所属类型
+        alert("i的类型是"+typeof (i));
+        var j=123;
+        alert("j的类型是"+typeof (j));
+        var m="123";
+        alert("123*“123”="+j*m);
+        var n="abc";
+        alert("123*“abc”="+j*n+"---测试NAN不是数字");
+        if(!isNaN(n)){
+            alert("是数字");
+        }else {
+            alert("不是数字");
+        }
+
+
     </script>
 
     <script type="text/javascript" src="../js/test01.js">
