--- a/html_js/src/main/webapp/WEB-INF/动态和静态onclick事件.html
+++ b/html_js/src/main/webapp/WEB-INF/动态和静态onclick事件.html
@@ -3,6 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style type="text/css">
+        .button {
+            background-color: #4CAF50; /* Green */
+            border: none;
+            color: white;
+            padding: 15px 32px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            font-size: 16px;
+        }
+
+    </style>
     <script type="text/javascript">
         function fun1() {
             alert("静态获取onclick事件！")
@@ -28,10 +41,10 @@
        <br/>
        <br/>
        <br/>
-       <button onclick="fun1();">静态获取</button><br/>
+       <button class="button" onclick="fun1();">静态获取</button><br/>
        <br/>
        <br/>
-       <button id="button1">动态获取</button>
+       <button  class="button" id="button1">动态获取</button>
 
 
    </div>
