--- a/html_js/src/main/webapp/WEB-INF/documentByName.html
+++ b/html_js/src/main/webapp/WEB-INF/documentByName.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script type="text/javascript">
+        // byTagName("input") 可以是标签名
     /*    window.onload=function (ev) {
           var ckb=document.getElementsByName("ck");
 
