bran1 web|注册完成差不多

--- a/项目_二阶段/src/main/webapp/pages/user/regist.html
+++ b/项目_二阶段/src/main/webapp/pages/user/regist.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
+	<!--写 base 标签，永远固定相对路径跳转的结果-->
+	<base href="http://localhost:8080/book/">
 <title>阅读人生会员注册页面</title>
-<link type="text/css" rel="stylesheet" href="../../static/css/style.css" >
-	<script type="text/javascript" src="../../static/jQuery/jquery-1.7.2.js"></script>
+<link type="text/css" rel="stylesheet" href="static/css/style.css" >
+	<script type="text/javascript" src="static/jQuery/jquery-1.7.2.js"></script>
 	<script type="text/javascript">
 		$(function () {
 			//绑定注册按钮
@@ -68,7 +70,7 @@
 </head>
 <body>
 		<div id="login_header">
-			<img class="logo_img" alt="" src="../../static/img/logo.jpg" >
+			<img class="logo_img" alt="" src="static/img/logo.jpg" >
 		</div>
 		
 			<div class="login_banner">
@@ -85,7 +87,7 @@
 								<span class="errorMsg"></span>
 							</div>
 							<div class="form">
-								<form action="regist_success.html">
+								<form action="registerServlet" method="post">
 									<label>用户名称：</label>
 									<input class="itxt" type="text" placeholder="请输入用户名" autocomplete="off" tabindex="1" name="username" id="username" />
 									<br />
@@ -103,8 +105,8 @@
 									<br />
 									<br />
 									<label>验证码：</label>
-									<input class="itxt" type="text" style="width: 150px;" id="code"/>
-									<img alt="" src="../../static/img/code.bmp" style="float: right; margin-right: 40px">									
+									<input class="itxt" type="text" style="width: 150px;" id="code" name="code"/>
+									<img alt="" src="static/img/code.bmp" style="float: right; margin-right: 40px">
 									<br />
 									<br />
 									<input type="submit" value="注册" id="sub_btn" />
