--- a/项目_二阶段/src/main/webapp/pages/user/regist_success.html
+++ b/项目_二阶段/src/main/webapp/pages/user/regist_success.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>阅读人生会员注册页面</title>
+	<!--写 base 标签，永远固定相对路径跳转的结果-->
+	<base href="http://localhost:8080/book/">
 <link type="text/css" rel="stylesheet" href="../../static/css/style.css" >
 <style type="text/css">
 	h1 {
