--- a/项目_二阶段/src/main/webapp/pages/user/login.html
+++ b/项目_二阶段/src/main/webapp/pages/user/login.html
@@ -3,11 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <title>阅读人生会员登录页面</title>
-<link type="text/css" rel="stylesheet" href="../../static/css/style.css" >
+	<base href="http:localhost:8080/book">
+<link type="text/css" rel="stylesheet" href="static/css/style.css" >
 </head>
 <body>
 		<div id="login_header">
-			<img class="logo_img" alt="" src="../../static/img/logo.jpg" >
+			<img class="logo_img" alt="" src="static/img/logo.jpg" >
 		</div>
 		
 			<div class="login_banner">
@@ -28,7 +29,7 @@
 								<span class="errorMsg">请输入用户名和密码</span>
 							</div>
 							<div class="form">
-								<form action="login_success.html">
+								<form action="loginServlet" method="get">
 									<label>用户名称：</label>
 									<input class="itxt" type="text" placeholder="请输入用户名" autocomplete="off" tabindex="1" name="username" />
 									<br />
