bran1 修改项目二阶段模块名

--- a/book_tow/src/main/webapp/pages/user/login.html
+++ b/book_tow/src/main/webapp/pages/user/login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>阅读人生会员登录页面</title>
-	<base href="http:localhost:8080/book">
+	<base href="http://localhost:8080/book">
 <link type="text/css" rel="stylesheet" href="static/css/style.css" >
 </head>
 <body>
@@ -29,7 +29,7 @@
 								<span class="errorMsg">请输入用户名和密码</span>
 							</div>
 							<div class="form">
-								<form action="loginServlet" method="get">
+								<form action="loginServlet" method="post">
 									<label>用户名称：</label>
 									<input class="itxt" type="text" placeholder="请输入用户名" autocomplete="off" tabindex="1" name="username" />
 									<br />
