--- a/book_tow/src/main/webapp/pages/user/login.html
+++ b/book_tow/src/main/webapp/pages/user/login.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>阅读人生会员登录页面</title>
-	<base href="http://localhost:8080/book">
+	<base href="http://localhost:8080/book/">
 <link type="text/css" rel="stylesheet" href="static/css/style.css" >
 </head>
 <body>
