--- a/book_tow/src/main/webapp/pages/order/order.html
+++ b/book_tow/src/main/webapp/pages/order/order.html
@@ -17,7 +17,7 @@
 			<img class="logo_img" alt="" src="../../static/img/logo.gif" >
 			<span class="wel_word">我的订单</span>
 			<div>
-				<span>欢迎<span class="um_span">韩总</span>光临尚硅谷书城</span>
+				<span>欢迎<span class="um_span">韩总</span>光临天天看书书城</span>
 				<a href="../order/order.html">我的订单</a>
 				<a href="../../index.html">注销</a>&nbsp;&nbsp;
 				<a href="../../index.html">返回</a>
@@ -60,7 +60,7 @@
 	
 	<div id="bottom">
 		<span>
-			尚硅谷书城.Copyright &copy;2015
+			天天看书书城.Copyright &copy;2015
 		</span>
 	</div>
 </body>
