--- a/book_tow/src/main/webapp/index.html
+++ b/book_tow/src/main/webapp/index.html
@@ -14,7 +14,7 @@
 				<a href="pages/user/login.jsp">登录</a> |
 				<a href="pages/user/regist.jsp">注册</a> &nbsp;&nbsp;
 				<a href="pages/cart/cart.html">购物车</a>
-				<a href="pages/manager/manager.html">后台管理</a>
+				<a href="pages/manager/manager.jsp">后台管理</a>
 			</div>
 	</div>
 	<div id="main">
