bran1 json| JSON.stringify() 把 json 对象转换成为 json 字符串 JSON.parse() 把 json 字符串转换成为 json 对象

--- a/jsonweb/src/main/webapp/json01.html
+++ b/jsonweb/src/main/webapp/json01.html
@@ -29,6 +29,10 @@
          }
          alert(jsonObj.key4[0].key40);
 
+         var jsString=JOSN.stringify(jsonObj);
+         alert(jsString)
+         var jsObject=JOSN.parse(jsonObj);
+         alert(jsObject)
 
      }
 
