bran1 json|javaBean 和 json 的互转

--- a/jsonweb/src/main/webapp/json01.html
+++ b/jsonweb/src/main/webapp/json01.html
@@ -31,7 +31,7 @@
 
          var jsString=JOSN.stringify(jsonObj);
          alert(jsString)
-         var jsObject=JOSN.parse(jsonObj);
+         var jsObject=JOSN.parse(jsString);
          alert(jsObject)
 
      }
